# BuyerBench

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  buyerbench.config.yaml.example  pyproject.toml
.maestro/playbooks/: LOOP_00001_ENTITIES.md  LOOP_00001_MARKET_ANALYSIS.md  LOOP_00001_PLAN.md  RESEARCH_LOG_CladiBuyer Benchmarker_2026-04-04.md
agents/: __init__.py  claude_code_agent.py  cli_base.py  codex_agent.py  gemini_agent.py  mock.py  negmas_agent.py  registry.py  stripe_toolkit_agent.py
buyerbench/: __main__.py  models.py  review.py
docs/agents/: AGENT-LANDSCAPE-SUMMARY.md  INDEX.md  consumer-shopping.md  enterprise-procurement.md  negotiation-and-economics.md  payment-protocols.md  trading-and-simulation.md
docs/literature/: INDEX.md  RESEARCH-GAPS.md
docs/paper/: FIGURE-PLAN.md  PAPER-STATUS.md  SUBMISSION-CHECKLIST.md  buyerbench-paper.md  references.bib
evaluators/: __init__.py  aggregate.py  pillar1.py  pillar2.py  pillar3.py
harness/: config.py  loader.py  mock_mcp_server.py  preflight.py  prompt.py  runner.py
notebooks/: results-analysis.ipynb
results/: report.py  schemas.py
results/experiments/: FULL-REPORT.md
tests/: test_aggregate.py  test_cli_adapters.py  test_dashboard_notebook.py  test_demo.py  test_evaluator_pillar1.py  test_evaluator_pillar2.py  test_evaluator_pillar3.py  test_evaluators.py  test_full_report.py  test_loader.py  test_models.py  test_opensource_agents.py  test_pillar2_experiments.py  test_pillar3_experiments.py  test_preflight.py  test_prompt.py  test_run_all_agents.py  test_scenarios.py
(+80 files in other folders)
